Fixing relative urls

--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
 <p>Hi, I’m Giacomo Vaccario, a senior research at ETH Zurich specializing in complexity. This site showcases my research, publications, and projects.</p>
 <p>Explore the sections to learn more:</p>
 <ul>
-<li><a href="/about/">About Me</a></li>
-<li><a href="/teaching/">Teaching</a></li>
-<li><a href="/projects/">Projects</a></li>
-<li><a href="/publications/">Publications</a></li>
+<li><a href="about/">About Me</a></li>
+<li><a href="teaching/">Teaching</a></li>
+<li><a href="projects/">Projects</a></li>
+<li><a href="publications/">Publications</a></li>
 </ul>
 <p>Feel free to reach out if you’re interested in collaborations or learning more about my work.</p>
 
